Changed field names to be more descriptive.

--- a/views/inquire/inquisition.ejs
+++ b/views/inquire/inquisition.ejs
@@ -14,7 +14,7 @@
 						</div>
 						<div class="container" id="detail_container">
 							<label for="details"> Details:</label>
-							<textarea type="text" class="form-control" name="content" id="details"
+							<textarea type="text" class="form-control" name="details" id="details"
 								aria-describedby="detail_help" cols="25" rows="10" required></textarea>
 							<small id="detail_help" class="contentHelper form-text text-muted">View our <a
 									href="#">guidelines</a> to make
