--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,48 +1,87 @@
+.btn-primary {
+	position: absolute;
+	bottom: 76px;
+	left: 70%;
+}
+
+.row {
+	margin-left: 69px;
+}
+
+.col-lg {
+	padding: 0;
+}
+
+.form-group {
+	width: 100%;
+	padding: 20px 25px 20px 0px; 
+}
+
 
 .signup-title {
 	text-align: center;
-	display: block;
-    margin-left: 25%;
-	margin-right: 25%;
+    margin-left: -4%;
 	margin-top: 50px;
 }
 .signup-form {
-    padding: 5px;
-    margin-left: 25%;
-	margin-right: 25%;
-	margin-top: 50px;
-    width: 800px;
-}  
-
-.form-group {
-	display: inline-block;
-	width: 48%;
-    padding: 20px 25px 20px 0px; 
-}
-
-.btn-primary {
+	background-color: rgba(52, 58, 64, 0.8);
+	border: 1px solid black;
+	border-radius: 20px;
+	padding: 5px;
 	position: relative;
-	top: 55%;
-	left: 25%;
-	background-color:#343a40;
+	margin-right: 30%;
+	margin-top: 50px;
+	width: 800px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-ms-border-radius: 20px;
+	-o-border-radius: 20px;
 }
 
-.password {
-	display: flex;
-	height: 100px;
-	width: 100%;
+.name_field {
+	width: 300px;
+}
+
+#email {
+	width: 652px;
+}
+
+#email_container {
+	margin-top: 20px;
+}
+
+#last_name_container {
+	margin-left: 50px;
+}
+
+#pass_container {
+	margin-top: 20px;
 }
 
 #password {
 	width: 300px;
 }
 
+#password_container {
+	margin-right: 10px;
+}
+
 #password_conf {
-	display: block;
 	width: 300px;
 }
 
-#pass_conf {
-	margin-left: 90px;
-	width: 300px;
+#pass_requirements {
+	margin-left: 57px;
+}
+
+#username {
+	width: 652px;
+}
+
+#username_container {
+	margin-top: 20px;
+}
+
+#username_help {
+	color: yellow;
 }
