--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,46 +1,63 @@
 <h1 class="signup-title">Create a new account</h1>
-<div class="signup-form">
+<div class="signup-form container">
   <form action="/auth/signup" method="POST">
+    <div class="form-group">
 
-    <div class="form-group">
-      <label for="firstName">First Name</label>
-      <input type="text" class="form-control" id="firstName" name="firstName" required>
-    </div>
-    <div class="form-group">
-      <label for="lastName">Last Name</label>
-      <input type="text" class="form-control" id="lastName" name="lastName" required>
-    </div>
-    <div class="form-group">
-      <label for="new-email">Email address</label>
-      <input type="email" class="form-control" id="email" name="email" required>
-    </div>
-    <div class="form-group ">
-      <label for="userName">Username</label>
-      <input type="text" class="form-control" id="username" name="username" required>
-    </div>
+      <div class="row">
+        <div id="first_name_container">
+          <label for="firstName">First Name</label>
+          <input type="text" class="form-control name_field" id="firstName" name="firstName" required>
+        </div>
 
-    <div class="form-group">
-      <div id="pass">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      <div id="pass_conf">
-        <label for="password_conf">Confirm Password</label>
-        <input type="password" class="form-control" id="password_conf" name="password_conf" required>
-        
+        <div id="last_name_container">
+          <label for="lastName">Last Name</label>
+          <input type="text" class="form-control name_field" id="lastName" name="lastName" required>
+        </div>
       </div>
-    </div>
 
-    <div class="container">
-      <h5 id="password-reqTitle">Password Requirements</h5>
-      <h6 id="password-reqUl">
-        <ul>
-          <li>Must be 8 to 99 alphanumeric characters.</li>
-          <li>Must contain at least one uppercase character.</li>
-        </ul>
-      </h6>
-    </div>
+      <div class="row">
+        <div id="email_container">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+      </div>
+
+      <div class="row">
+        <div id="username_container">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required>
+          <small class="form-text" id="username_help">Must be 5 to 25 characters long</small>
+        </div>
+      </div>
+
+      <div id="pass_container" class="row">
+        <div id="password_container" class="col-lg">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+
+        <div id="pass_confirm_container" class="col-lg">
+          <label for="password_conf">Confirm Password</label>
+          <input type="password" class="form-control " data-container="body" data-toggle="popover"
+            data-placement="right" data-content="Your passwords do not match!" id="password_conf" name="password_conf">
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Register</button>
+  </form>
+</div>
+
+<div class="container" id="pass_requirements">
+  <h5 id="password-reqTitle">Password Requirements</h5>
+  <ul>
+    <li>Must be 8 to 99 alphanumeric characters.</li>
+    <li>Must contain at least one uppercase character.</li>
+  </ul>
 </div>
 </div>
-<button type="submit" class="btn btn-primary">Register</button>
+</div>
 </form>
 </div>
+
+<!-- Local scripts -->
+<script src="/js/loginScript.js"></script>
