--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button id="registerBtn" type="submit" class="btn btn-primary">Register</button>
   </form>
 </div>
 
