--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,8 +1,13 @@
 html,
 body {
-	height: 100%;
 	background-color: #8D98A7;
 	color: antiquewhite;
+	height: 100%;
+}
+
+.dropdown-menu {
+	font-size: 12px;
+	text-align: center;
 }
 
 .navbar {
@@ -34,6 +39,23 @@ body {
 	right: 0;
 }
 
+#drop {
+	position: absolute;
+	bottom: -8px;
+	right: -25.3px;
+}
+
+#global_footer {
+	background-color: #343a40;
+	height: 60px;
+	margin-top: 20px;
+	margin-bottom: 0;
+	padding: 20px;
+	position: static;
+	text-align: center;
+	width: 100%;
+}
+
 #profile_blank {
 	background-color: white;
 	height: 75%;
@@ -57,22 +79,11 @@ body {
 	width: 26px;
 }
 
-#drop {
-	position: absolute;
-	bottom: -8px;
-	right: -25.3px;
+#spanish_inquisition {
+	height: 30px;
+	line-height: 0.5;
 }
 
 #user_menu {
 	width: 63px;
-}
-
-.dropdown-menu {
-	font-size: 12px;
-	text-align: center;
-}
-
-#spanish_inquisition {
-	height: 30px;
-	line-height: 0.5;
 }
